# typediter

./: .gitignore  Readme.md  pyproject.toml
src/typediter/classes/: _base.py
tests/: __init__.py
tests/helpers/: __init__.py  test_samples.py  types.py
tests/helpers/assertions/: __init__.py  _helpers.py  initialisation_asserts.py  iterability_asserts.py  operation_asserts.py  utility_asserts.py
tests/helpers/msg/: __init__.py  _data_formaters.py  initialisation.py  iterability.py  operation.py  utility_operation.py
tests/test_cases/: __init__.py  base.py  common_copy.py  common_set.py  common_tuple_list.py  list.py  set.py  utility.py
