[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"typediter" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[project]
name = "typediter"
version = "0.9.0"
authors = [
    { name = 'Didier Martin', email = 'didier.martin.dev@gmail.com' }
]
description = "Type safe versions of python builtin iterables"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "type safe", "type-safe",
    "typed", "iterable", "iterables", 
    "list", "tuple", "set", "frozenset",
]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"